# 2sad_oop

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: money.h
src/: money.cpp
tests/: test2.cpp
